fix scrollbar bug on mobile

--- a/stylesheets/index-mobile.css
+++ b/stylesheets/index-mobile.css
@@ -2,21 +2,16 @@
   and (min-device-width: 300px) 
   and (max-device-width: 812px) 
   and (-webkit-min-device-pixel-ratio: 3) {
-  html,
-  body {
-    margin: 0;
-  }
   html {
-      overflow: scroll;
-      overflow-x: hidden;
+    overflow: scroll;
+    overflow-x: hidden;
   }
   ::-webkit-scrollbar {
       width: 0px;  /* remove scrollbar space */
       background: transparent;  /* optional: just make scrollbar invisible */
   }
-  /* optional: show position indicator in red */
-  ::-webkit-scrollbar-thumb {
-      background: #FF0000;
+  body {
+    margin: 0;
   }
 
   #app {
